<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".auth.SignUp">

    <LinearLayout
        android:id="@+id/main"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:paddingLeft="15dp"
        android:gravity="center"
        android:paddingRight="15dp">
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/signup_title"
            android:textColor="@color/primaryColor"
            android:textSize="28dp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginBottom="@dimen/main_title"
            android:layout_height="wrap_content"/>
        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            app:dividerColor="@color/grey"
            android:layout_marginBottom="@dimen/button_height"
            android:layout_height="1.5dp"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/primaryColor"
                android:textSize="14dp"
                android:text="@string/signup_username"/>
            <EditText
                android:id="@+id/signup_username"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:inputType="text"
                android:textColorHint="@color/grey"
                android:background="@drawable/edittext"
                android:textSize="16dp"
                android:hint="@string/signup_username_hint"
                android:textCursorDrawable="@color/primaryColor"
                android:layout_height="50dp"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/primaryColor"
                android:textSize="14dp"
                android:text="@string/signup_email"/>
            <EditText
                android:id="@+id/signup_email"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/grey"
                android:background="@drawable/edittext"
                android:textSize="16dp"
                android:hint="@string/signup_email_hint"
                android:textCursorDrawable="@color/primaryColor"
                android:layout_height="50dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/primaryColor"
                android:textSize="14dp"
                android:text="@string/signup_password"/>
            <EditText
                android:id="@+id/signup_password"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:textColorHint="@color/grey"
                android:inputType="textPassword"
                android:textSize="16dp"
                android:background="@drawable/edittext"
                android:hint="@string/password_hint"
                android:textCursorDrawable= "@color/primaryColor"
                android:layout_height="50dp"/>
        </LinearLayout>
        <Button
            android:id="@+id/signup_btn"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/button_height"
            android:text="@string/signup_btn"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_height="@dimen/button_height"/>
    </LinearLayout>

</FrameLayout>